[package]
name = "nns-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.3"
ic-cdk = "0.6.5"
ic-cdk-macros = "0.6.5"
rmp-serde = "1.1.1"
serde = "1.0.147"
thiserror = "1.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }